--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,5 +1,6 @@
 @use "@/styles/mixins/mediaQueries.scss";
 @use "@/styles/variables.scss";
+@use "@/styles/mixins/layoutMixins.scss";
 
 .flex {
   display: flex;
@@ -20,9 +21,25 @@
 
 .grid {
   display: grid;
+
+  &_page_container {
+    grid-template-columns: 1fr;
+
+    @include mediaQueries.tablet {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @include mediaQueries.desktop {
+      grid-template-columns: repeat(12, 1fr);
+    }
+
+    @include mediaQueries.large-screen {
+      grid-template-columns: repeat(16, 1fr);
+    }
+  }
 }
 
-.layout_container {
+.window_container {
   height: 100dvh;
   width: 100%;
 }
@@ -30,22 +47,12 @@
 .page_container {
   position: relative;
   height: calc(100dvh - variables.$size-38);
-  max-width: calc(100% - 3rem);
-  margin-inline: auto;
+  background-color: lightgreen;
+  padding-inline: auto;
 
-  &_nav {
-    height: calc(100dvh - variables.$size-38);
-  }
+  // &_nav {
+  //   height: calc(100dvh - variables.$size-38);
+  // }
 
-  @include mediaQueries.tablet {
-    max-width: calc(100% - 10rem);
-  }
-
-  @include mediaQueries.desktop {
-    max-width: calc(100% - 25rem);
-  }
-
-  @include mediaQueries.large-screen {
-    max-width: calc(100% - 35rem);
-  }
+  @include layoutMixins.page_width;
 }
