adjust grid for tablet and desktop

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -24,7 +24,11 @@
 
   &_page_container {
     @include layoutMixins.page_grid_columns;
-    grid-template-rows: 100dvh repeat(20rem, 2);
+    grid-template-rows: 100dvh repeat(2, 20rem);
+
+    @include mediaQueries.desktop {
+      grid-template-rows: 100dvh 35rem repeat(2, 20rem);
+    }
   }
 }
 
@@ -42,6 +46,15 @@
   outline: 2px solid white;
   @include layoutMixins.page_grid_columns;
   grid-template-rows: 60dvh 40dvh;
+
+  @include mediaQueries.tablet {
+    grid-area: 1 / 1 / 2 / 3;
+  }
+
+  @include mediaQueries.desktop {
+    grid-template-rows: repeat(2, 50dvh);
+    grid-area: 1 / 1 / 2 / 13;
+  }
 }
 
 .product_card_wrapper {
