refactor screensize breakpoints

--- a/components/Panels/FeaturePanel/FeaturePanel.module.scss
+++ b/components/Panels/FeaturePanel/FeaturePanel.module.scss
@@ -3,7 +3,7 @@
 .feature_panel_primary {
   background-color: red;
 
-  @include mediaQueries.tablet {
+  @include mediaQueries.medium-screen {
     grid-area: 1 / 1 / 2 / 3;
   }
 }
