--- a/styles/mixins/layoutMixins.scss
+++ b/styles/mixins/layoutMixins.scss
@@ -4,15 +4,15 @@
   width: calc(100% - 3rem);
   margin-inline: auto;
 
-  @include mediaQueries.tablet {
+  @include mediaQueries.medium-screen {
     width: calc(100% - 10rem);
   }
 
-  @include mediaQueries.desktop {
+  @include mediaQueries.small-desktop {
     width: calc(100% - 25rem);
   }
 
-  @include mediaQueries.large-screen {
+  @include mediaQueries.extra-large-screen {
     width: calc(100% - 35rem);
   }
 }
@@ -20,15 +20,15 @@
 @mixin page_grid_columns {
   grid-template-columns: 1fr;
 
-  @include mediaQueries.tablet {
+  @include mediaQueries.medium-screen {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  @include mediaQueries.desktop {
+  @include mediaQueries.small-desktop {
     grid-template-columns: repeat(12, 1fr);
   }
 
-  @include mediaQueries.large-screen {
+  @include mediaQueries.extra-large-screen {
     grid-template-columns: repeat(16, 1fr);
   }
 }
