--- a/components/Panels/FeaturePanel/FeaturePanel.module.scss
+++ b/components/Panels/FeaturePanel/FeaturePanel.module.scss
@@ -10,6 +10,9 @@
   @include mediaQueries.small-desktop {
     grid-area: 1 / 1 / 3 / 9;
   }
+  @include mediaQueries.extra-large-screen {
+    grid-area: 1 / 1 / 3 / 12;
+  }
 }
 
 .feature_panel_secondary {
@@ -21,6 +24,9 @@
 
   @include mediaQueries.small-desktop {
     grid-area: 1 / 9 / 3 / 13;
+  }
+  @include mediaQueries.extra-large-screen {
+    grid-area: 1 / 12 / 3 / 18;
   }
 }
 
