--- a/components/Panels/FeaturePanel/FeaturePanel.module.scss
+++ b/components/Panels/FeaturePanel/FeaturePanel.module.scss
@@ -1,4 +1,5 @@
 @use "@/styles/mixins/mediaQueries.scss";
+@use "@/styles/mixins/images.scss";
 
 .feature_panel_primary {
   @include mediaQueries.medium-screen {
