--- a/styles/mixins/images.scss
+++ b/styles/mixins/images.scss
@@ -9,7 +9,7 @@
   background-size: cover;
 
   /* Position the background image */
-  background-position: center center;
+  // background-position: center center;
 
   /* Optional: Set a minimum height for the div to ensure visibility of the background */
   height: 100%;
