update background position prop for greater image positioning control

--- a/components/BackgroundImageContainer/BackgroundImageContainer.module.scss
+++ b/components/BackgroundImageContainer/BackgroundImageContainer.module.scss
@@ -1,7 +1,6 @@
 @use "@/styles/mixins/images.scss";
 
 .container {
-  border: 2px solid lightblue;
   height: 100%;
   position: relative;
 }
@@ -12,6 +11,7 @@
 }
 
 .text_wrapper {
+  border: 2px solid orange;
   position: relative;
   z-index: 1;
 }
